--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-counter": "^1.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
